--- a/doh-server/doh-server.conf
+++ b/doh-server/doh-server.conf
@@ -22,6 +22,13 @@ cert = ""
 # TLS private key file
 key = ""
 
+#MYSQL Database information
+# The database is used to validate the tokens and requests
+mysql_username = ""
+mysql_password = ""
+mysql_database = ""
+mysql_host = "127.0.0.1"
+
 # HTTP path for resolve application
 path = "/dns-query"
 
@@ -35,7 +42,7 @@ upstream = [
 ]
 
 # Upstream timeout
-timeout = 10
+timeout = 15
 
 # Number of tries if upstream DNS fails
 tries = 3
