New release database logging

--- a/doh-server/doh-server.conf
+++ b/doh-server/doh-server.conf
@@ -24,10 +24,10 @@ key = ""
 
 #MYSQL Database information
 # The database is used to validate the tokens and requests
-mysql_username = ""
-mysql_password = ""
-mysql_database = ""
-mysql_host = "127.0.0.1"
+SqlUser = ""
+SqlPass = ""
+SqlDB = ""
+SqlHost = "127.0.0.1"
 
 # HTTP path for resolve application
 path = "/dns-query"
