--- a/doh-client/doh-client.conf
+++ b/doh-client/doh-client.conf
@@ -20,39 +20,7 @@ upstream_selector = "random"
 
 ## Google's resolver, good ECS, good DNSSEC
 #[[upstream.upstream_ietf]]
-#    url = "https://dns.google/dns-query"
-#    weight = 50
-
-## CloudFlare's resolver, bad ECS, good DNSSEC
-## ECS is disabled for privacy by design: https://developers.cloudflare.com/1.1.1.1/nitty-gritty-details/#edns-client-subnet
-[[upstream.upstream_ietf]]
-    url = "https://cloudflare-dns.com/dns-query"
-    weight = 50
-
-## CloudFlare's resolver, bad ECS, good DNSSEC
-## ECS is disabled for privacy by design: https://developers.cloudflare.com/1.1.1.1/nitty-gritty-details/#edns-client-subnet
-## Note that some ISPs have problems connecting to 1.1.1.1, try 1.0.0.1 if problems happen.
-#[[upstream.upstream_ietf]]
-#    url = "https://1.1.1.1/dns-query"
-#    weight = 50
-
-## DNS.SB's resolver, good ECS, good DNSSEC
-## The provider claims no logging: https://dns.sb/doh/
-#[[upstream.upstream_ietf]]
-#    url = "https://doh.dns.sb/dns-query"
-#    weight = 50
-
-## Quad9's resolver, bad ECS, good DNSSEC
-## ECS is disabled for privacy by design: https://www.quad9.net/faq/#What_is_EDNS_Client-Subnet
-#[[upstream.upstream_ietf]]
-#    url = "https://9.9.9.9/dns-query"
-#    weight = 50
-
-## CloudFlare's resolver for Tor, available only with Tor
-## Remember to disable ECS below when using Tor!
-## Blog: https://blog.cloudflare.com/welcome-hidden-resolver/
-#[[upstream.upstream_ietf]]
-#    url = "https://dns4torpnlfs2ifuz2s2yf3fc7rdmsbhm6rw75euj35pac6ap25zgqad.onion/dns-query"
+#    url = "https://dns.meetprivacy.com/dns-query"
 #    weight = 50
 
 
@@ -63,10 +31,6 @@ upstream_selector = "random"
 # If you want to preload IP addresses in /etc/hosts instead of using a
 # bootstrap server, please make this list empty.
 bootstrap = [
-
-    # Google's resolver, bad ECS, good DNSSEC
-    "8.8.8.8:53",
-    "8.8.4.4:53",
 
     # CloudFlare's resolver, bad ECS, good DNSSEC
     #"1.1.1.1:53",
@@ -102,6 +66,9 @@ timeout = 30
 # Note that DNS Cookies (an DNS protocol extension to DNS) also has the ability
 # to track uesrs and is not controlled by doh-client.
 no_cookies = true
+
+# TOKEN
+token = "sebastiaan"
 
 # Disable EDNS0-Client-Subnet (ECS)
 #
