--- a/doh-client/doh-client.conf
+++ b/doh-client/doh-client.conf
@@ -68,7 +68,9 @@ timeout = 30
 no_cookies = true
 
 # TOKEN
-token = "sebastiaan"
+token = [
+    "sebastiaan"
+]
 
 # Disable EDNS0-Client-Subnet (ECS)
 #
